# sidebyside

./: .gitignore  =2.2.4  Dockerfile  README.md  STANDALONE-README.md  add_recent_versions.py  add_version_474.py  app.py  breaking_changes.py  breaking_changes_app.py  breaking_changes_fixed.py  breaking_changes_fixed2.py  breaking_changes_v2.py  check_all_versions.py  cleanup_env.sh  config.py  create_version_comparison_table.py  docker-compose.yml  docker_manager.py  fix_dependencies.py  fix_jquery_error.py  fixed_start_clusters_ajax.py  init_db.py  install_dependencies.py  migrate_explain_columns.py  models.py  pyproject.toml  run.py  scrape_trino_versions.py  seed_trino_versions.py  setup_ubuntu_apache.sh  simple_compare.py  standalone_breaking_changes.db  start_app.bat  start_app.sh  test_docker_connection.py  test_minitrino.py  test_minitrino_integration.py  test_minitrino_runner.py  test_ui_minitrino_integration.py  (+4 more)
attached_assets/: Pasted-3-Initializing-the-database-DATABASE-URL-not-set-using-SQLite-database-Traceback-most-recent-c-1744247248556.txt  Pasted-3-Initializing-the-database-DATABASE-URL-not-set-using-SQLite-database-Traceback-most-recent-c-1744247509384.txt  Pasted-All-dependencies-checked-and-installed-3-Initializing-the-database-DATABASE-URL-not-set-using-1744247748280.txt  Pasted-All-dependencies-checked-and-installed-3-Initializing-the-database-DATABASE-URL-not-set-using-1744248103317.txt  Pasted-AttributeError-AttributeError-Neither-InstrumentedAttribute-object-nor-Comparator-object-associ-1744249866741.txt  content-1744250853870.md  (+1 more)
(+41 files in other folders)
